--- a/_sass/parts/navigation.scss
+++ b/_sass/parts/navigation.scss
@@ -65,6 +65,6 @@
   display: none;
 }
 
-body:not([data-theme]) .moon-icon {
+[data-theme=light] .moon-icon {
   display: none;
 }
