--- a/_sass/parts/posts.scss
+++ b/_sass/parts/posts.scss
@@ -111,6 +111,7 @@ article.post {
     margin-top: 48px;
     padding-top: 32px;
     border-top: 2px solid var(--border);
+    text-align: left;
     
     .back-link {
       color: var(--accent);
